tests/compile-fail/data_race/enable_after_join_to_main.stderr
warning: thread support is experimental and incomplete: weak memory effects are not emulated.

error: Undefined Behavior: Data race detected between Write on Thread(id = 6) and Write on Thread(id = 5) at alloc6093 (current vector clock = VClock([74, 11, 11, 11, 18]), conflicting timestamp = VClock([0, 0, 18]))
  --> $DIR/enable_after_join_to_main.rs:32:13
   |
32 |             *c.0 = 64; //~ ERROR Data race detected between Write on Thread(id = 6) and Write on Thread(id = 5)
   |             ^^^^^^^^^ Data race detected between Write on Thread(id = 6) and Write on Thread(id = 5) at alloc6093 (current vector clock = VClock([74, 11, 11, 11, 18]), conflicting timestamp = VClock([0, 0, 18]))
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside closure at $DIR/enable_after_join_to_main.rs:32:13

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error; 1 warning emitted

